<resources>
    <string name="app_name">Fundall eWallet</string>
    <string name="fundall_text">fundall</string>
    <string name="start_text">Start</string>
    <string name="financial_partner_text">A financial partner</string>
    <string name="for_everyone_text">for everyone</string>
    <string name="privacy_policy_text">privacy policy</string>
    <string name="and_text">and</string>
    <string name="by_clicking_sign_up_text">By clicking Sign Up, you agree to our</string>
    <string name="terms_conditions_text"><![CDATA[terms & conditions]]></string>
    <string name="first_step_text">Your first step toward a better financial lifestyle starts here</string>
    <string name="get_started_text">Let\'s get started</string>
    <string name="first_name_text">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number</string>
    <string name="password_text">Password</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="got_invite_code_text">Got invite code?</string>
    <string name="already_a_member_text">Already a member?</string>
    <string name="login_text">Login</string>
    <string name="lifestyle_text">lifestyle</string>
    <string name="chidimi_text">Chidimi\'s</string>
    <string name="not_chidimi_text">Not Chidimi?</string>
    <string name="switch_account_text">Switch Account</string>
    <string name="new_here_text">New here?</string>
    <string name="create_account_text">Create Account</string>
    <string name="biometrics_text">Biometrics</string>
    <string name="center_icon_text">Center Icon</string>
    <string name="password_background_image_text">Password Background Image</string>
    <string name="biometrics_background_image_text">Biometrics Background Image</string>
    <string name="biometrics_image_text">Biometrics Image</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="we_miss_you_text">We miss you, Chidimi</string>
    <string name="back_text">Back</string>
    <string name="welcome_back_text">Welcome Back!</string>
    <string name="naira_amount_text">₦12,634.37</string>
    <string name="income_text">Income</string>
    <string name="fundall_e_wallet_text">Fundall e-Wallet</string>
    <string name="account_id_text">Account ID: 901785611, Providus</string>
    <string name="total_balance_text">Total Balance</string>
    <string name="spent_text">Spent</string>
    <string name="request_for_new_lifestyle_card_text">Request for new Lifestyle Card</string>
    <string name="add_other_cards_text">Add other Cards</string>
    <string name="manage_card_settings_text">Manage Card Settings</string>
    <string name="cards_text">Cards</string>
    <string name="amount_placeholder">₦ %d</string>
</resources>
