<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fundall.ewallet.ui.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInFragment">


        <TextView
            android:id="@+id/welcome_back_textView"
            style="@style/AppText.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_back_text"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/back_textView"
            style="@style/AppText.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_text"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_back_textView"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="@+id/welcome_back_textView" />

        <ImageView
            android:id="@+id/user_imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.44"
            app:srcCompat="@drawable/ic_person_black_72dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="48dp"
            app:cardBackgroundColor="#D6D3D3"
            app:cardCornerRadius="200dp"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/welcome_back_textView" />

        <TextView
            android:id="@+id/miss_you_textView"
            style="@style/AppText.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/we_miss_you_text"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textInputLayout"
            style="@style/TextInput.OutlinedDense.NoBorderRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email_address_text"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/miss_you_textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail_outline_faint"
                android:drawableLeft="@drawable/ic_mail_outline_faint"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailAddress}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textInputLayout"
            style="@style/TextInput.OutlinedDense.NoBorderRadius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_margin_between"
            android:hint="@string/password_text"
            app:endIconMode="password_toggle"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_textInputEditText"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_outline_faint"
                android:drawablePadding="@dimen/input_drawable_padding"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_outline_faint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:onClick="@{() -> viewModel.signin()}"
            style="@style/AppButton.Filled"
            android:layout_width="@dimen/sign_up_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_textInputLayout" />

        <TextView
            android:id="@+id/new_here_textView"
            style="@style/AppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here_text"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/AppButton.Outlined.Bold.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/create_account_text"
            app:layout_constraintStart_toEndOf="@+id/new_here_textView"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/forgot_password_textView"
            style="@style/AppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintTop_toTopOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>