<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.fundall.ewallet.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterFragment">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/privacy_policy_button"
            android:onClick="@{() -> viewmodel.privacyPolicy()}"
            style="@style/AppButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_text"
            android:textSize="@dimen/app_small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline" />

        <TextView
            android:id="@+id/and_textview"
            style="@style/AppText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/and_text"
            android:textSize="@dimen/app_smaller_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/privacy_policy_button"
            app:layout_constraintEnd_toStartOf="@+id/privacy_policy_button"
            app:layout_constraintTop_toTopOf="@+id/privacy_policy_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/terms_and_conditions_button"
            android:onClick="@{() -> viewmodel.termsAndConditions()}"
            style="@style/AppButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions_text"
            android:textSize="@dimen/app_small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/privacy_policy_button"
            app:layout_constraintEnd_toStartOf="@+id/and_textview"
            app:layout_constraintTop_toTopOf="@+id/privacy_policy_button" />

        <TextView
            android:id="@+id/by_clicking_signup_textview"
            style="@style/AppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_clicking_sign_up_text"
            android:textSize="@dimen/app_smaller_text_size"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintEnd_toStartOf="@+id/terms_and_conditions_button"
            app:layout_constraintTop_toTopOf="@+id/terms_and_conditions_button" />

        <ScrollView
            android:id="@+id/parent_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/terms_and_conditions_button"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toStartOf="@+id/start_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/scrollview_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/get_started_textview"
                    style="@style/AppText.Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:text="@string/get_started_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/first_step_textview"
                    style="@style/AppText.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/first_step_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/get_started_textview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname_textInputLayout"
                    style="@style/TextInput.OutlinedDense.NoBorderRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/first_name_text"
                    app:boxStrokeColor="@color/app_color"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toStartOf="@+id/lastname_textInputLayout"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_step_textview">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname_textInputEditText"
                        android:text="@={viewmodel.firstName}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_faint"
                        android:drawableLeft="@drawable/ic_person_faint"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname_textInputLayout"
                    style="@style/TextInput.OutlinedDense.NoBorderRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/last_name"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toBottomOf="@+id/firstname_textInputLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/firstname_textInputLayout"
                    app:layout_constraintTop_toTopOf="@+id/firstname_textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname_textInputEditText"
                        android:text="@={viewmodel.lastName}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_faint"
                        android:drawableLeft="@drawable/ic_person_faint"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:imeOptions="actionNext"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textInputLayout"
                    style="@style/TextInput.OutlinedDense.NoBorderRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_between"
                    android:hint="@string/email_address_text"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstname_textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textInputEditText"
                        android:text="@={viewmodel.emailAddress}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mail_outline_faint"
                        android:drawableLeft="@drawable/ic_mail_outline_faint"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_textInputLayout"
                    style="@style/TextInput.OutlinedDense.NoBorderRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_between"
                    android:hint="@string/phone_number_text"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_textInputEditText"
                        android:text="@={viewmodel.phoneNumber}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phone_faint"
                        android:drawableLeft="@drawable/ic_phone_faint"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:imeOptions="actionNext"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textInputLayout"
                    style="@style/TextInput.OutlinedDense.NoBorderRadius"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_margin_between"
                    android:hint="@string/password_text"
                    app:endIconMode="password_toggle"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_textInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textInputEditText"
                        android:text="@={viewmodel.password}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_faint"
                        android:drawablePadding="@dimen/input_drawable_padding"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/ic_lock_outline_faint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/got_invite_textview"
                    android:onClick="@{() -> viewmodel.getInviteCode()}"
                    style="@style/AppText.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/got_invite_code_text"
                    android:textColor="@color/app_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_textInputLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_button"
                    android:onClick="@{() -> viewmodel.signup()}"
                    style="@style/AppButton.Filled"
                    android:layout_width="@dimen/sign_up_button_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/sign_up_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/got_invite_textview" />

                <TextView
                    android:id="@+id/already_member_textview"
                    style="@style/AppText.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_a_member_text"
                    app:layout_constraintBottom_toBottomOf="@+id/login_button"
                    app:layout_constraintEnd_toStartOf="@+id/login_button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/login_button" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:onClick="@{() -> viewmodel.login()}"
                    style="@style/AppButton.Outlined"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/already_member_textview"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>